v0.02.16 (not released yet)
- (DJ) Leech (by Wallasaurus) added
- (JKos) spellbook update
- (Thomson) level 3 gem socket/lock (by Thomson) added
- (Thomson) level 3 cat eyes sockets (by Thomson) added
- (Thomson) several fixes on level 3. Levels 1-3 are now playable
- (Thomson) stub wallset for dwarven levels added
- (Thomson) Skeleton with axe (by Leki) added

v0.02.14 (2013-01-22)
- (JKos) Grimwidgets and LoG Framework updated. (sorry about previous accidental commit)
- (Thomson) Grimwidgets framework integrated. Currently only compass is functional.
- (DJ) New sewer wallset: 
	 - models and textures
	 - clean up the old model/texture files
	 - changes in scripts
	 - need little more testing...
- (DJ) Change object type for Grating/Pipe to walltext. Now we can set the text messages from EOB
- (DJ) Bug fix: Kobold rune walltext model
- (DJ) Added new lightsource objects with particle effect for sewer pipes ang drainage grate. Added sound effect too.
- (DJ) New empty object for secret door: secret_door_empty
- (DJ) Reworked Illusion walls script and mechanics. Now we need only one object "eob_illusion_wall_door" for any wallset illusion walls. Walls will be created using the proper "wall_cube" decoration object.
- (DJ) Bug fix: Dagger carving alcove position fix
- (DJ) Added new R.A.T.S. walltext object, fix facing of all secret doors

v0.02.13 (2012-12-31)
- (Thomson) Initial early version of events added. Example is on (15,13), level 4
- (DJ) Added iron sewer doors
- (JKos) Improved t-script entity and added a new entity object 'testpoint', which is a cloned script entity with starting location icon.
	- You can place testpoint to dungeon and write the test scripts in them
	- Testpoints can be executed by calling t.run(testpoint_id), which teleports the party to testpoint's location and executes the activate function of testpoint
	- Added t.list(entityName, [level]), which list all entities whose name matches to the entityName even paritially. Level is optional. 