@@ -6,6 +6,7 @@ v0.02.16 (not released yet)
 - (Thomson) several fixes on level 3. Levels 1-3 are now playable
 - (Thomson) stub wallset for dwarven levels added
 - (Thomson) Skeleton with axe (by Leki) added
+- (Thomson) Walking walls on level 4 are now working (includes special quest)
 
 v0.02.14 (2013-01-22)
 - (JKos) Grimwidgets and LoG Framework updated. (sorry about previous accidental commit)
